- support for UUID (including UUID=xxx in fstab)
- do not set relatime option for mounting nfs
- nicely adjust mtime of fontconfig cache files
- steps window: do not underline categories (Installation, Configuration)

Version 10.4.183 - 31 August 2007, by Pascal "Pixel" Rigaux

- add new step "choose desktop", before or hiding "choose groups"
- bootloader-config
  o handle new naming of vmlinuz flavors: vmlinuz-<version>-<flavor>-Xmdv
    instead of vmlinuz-<version>-Xmdv<flavor>
  o always use "linux" short name instead of "linux-<flavor>"
    (since the long name is quite nice nowadays)

Version 10.4.182 - 30 August 2007, by Thierry Vignaud

- enable snd-ac97-codec power_save=1 option if installed on laptop (#32213)
- set specific icons for summary steps (#32923)
- assume system is a laptop if it contains some "Intel Corporation|Mobile" devices
  (fix Samsung Q1U detection, #32967)

Version 10.4.181 - 29 August 2007, by Thierry Vignaud

- fix translating steps titles
- ugtk2: use given title if available instead of default step title (#32923)

Version 10.4.180 - 27 August 2007, by Thierry Vignaud

- bug command: fix choosing the usb-key/floppy drive
  (ie adapting interactive::stdio to new interactive callbacks)
- add /usr/share/ldetect-lst/fallback-modules.alias for 
  drakx-in-chroot on old kernels
- fallback to kernel-desktop
- fix summary in text mode (#32858)
- fix loading linux software raid (mdadm) kernel modules
  (after rename raid5&raid6 -> raid456)
- diskdrake
  o fix action "Type" on a software raid (eg: dm0)
  o fix coloring "Other" partitions (#32845)
- update banner for RC1

Version 10.4.179 - 24 August 2007, by Thierry Vignaud

- install kernel-desktop-devel-latest instead of
  kernel-source-stripped-latest on upgrade

Version 10.4.178 - 24 August 2007, by Thierry Vignaud

- adapt to new kernel flavors

Version 10.4.177 - 24 August 2007, by Pascal "Pixel" Rigaux

- fix typo in banner name (otherwise internal_error)
