@@ -2,6 +2,7 @@
 - do not set relatime option for mounting nfs
 - nicely adjust mtime of fontconfig cache files
 - steps window: do not underline categories (Installation, Configuration)
+- nicer "choose desktop" step with icons
 
 Version 10.4.183 - 31 August 2007, by Pascal "Pixel" Rigaux
 
